
  - [feature] The after_attach event is now
    emitted after the object is established
    in Session.new or Session.identity_map
    upon Session.add(), Session.merge(),
    etc., so that the object is represented
    in these collections when the event
    is called.  Added before_attach
    event to accommodate use cases that
    need autoflush w pre-attached object.
    [ticket:2464]

  - [feature] The registry of classes
    in declarative_base() is now a
    WeakValueDictionary.  So subclasses of
    "Base" that are dereferenced will be
    garbage collected, *if they are not
    referred to by any other mappers/superclass
    mappers*. See the next note for this ticket.
    [ticket:2526]

  - [feature] *Very limited* support for
    inheriting mappers to be GC'ed when the
    class itself is deferenced.  The mapper
    must not have its own table (i.e.
    single table inh only) without polymorphic
    attributes in place.
    This allows for the use case of
    creating a temporary subclass of a declarative
    mapped class, with no table or mapping
    directives of its own, to be garbage collected
    when dereferenced by a unit test.
    [ticket:2526]

  - [removed] Deprecated identifiers removed:

    * allow_null_pks mapper() argument
      (use allow_partial_pks)

    * _get_col_to_prop() mapper method
      (use get_property_by_column())

    * dont_load argument to Session.merge()
      (use load=True)

    * sqlalchemy.orm.shard module
      (use sqlalchemy.ext.horizontal_shard)

- engine
  - [feature] Connection event listeners can
    now be associated with individual
    Connection objects, not just Engine
    objects.  [ticket:2511]

  - [bug] Fixed bug whereby if a database restart
    affected multiple connections, each
    connection would individually invoke a new
    disposal of the pool, even though only
    one disposal is needed.  [ticket:2522]

  - [feature] Added a new system
    for registration of new dialects in-process